--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       --glass: rgba(255,255,255,0.03);
     }
     *{box-sizing:border-box;font-family:"Cairo",system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue","Noto Sans Arabic",Arial;}
-    html,body{height:100%;margin:0;background:radial-gradient(900px 600px at 10% 20%, rgba(124,58,237,0.12), transparent 6%), radial-gradient(700px 450px at 95% 80%, rgba(6,182,212,0.08), transparent [...]
+    html,body{height:100%;margin:0;background:radial-gradient(900px 600px at 10% 20%, rgba(124,58,237,0.12), transparent 6%), radial-gradient(700px 450px at 95% 80%, rgba(6,182,212,0.08), transparent 50%), linear-gradient(180deg, var(--bg-1), var(--bg-2));color:#dce9f5}
     .app{max-width:1300px;margin:24px auto;padding:20px;display:grid;grid-template-columns: 1fr;gap:18px}
     header{display:flex;gap:12px;align-items:center;justify-content:space-between}
     .brand{display:flex;gap:14px;align-items:center}
@@ -72,7 +72,7 @@
     .table-controls{display:flex;gap:8px;align-items:center;justify-content:space-between}
     .search{padding:8px 12px;border-radius:8px;background:rgba(255,255,255,0.02);border:1px solid rgba(255,255,255,0.03);color:var(--muted)}
     table{width:100%;border-collapse:collapse;font-size:13px}
-    thead th{position:sticky;top:0;background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));color:var(--muted);padding:10px;text-align:right;border-bottom:1px solid rgba(255,[...]
+    thead th{position:sticky;top:0;background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));color:var(--muted);padding:10px;text-align:right;border-bottom:1px solid rgba(255,255,255,0.04)}
     tbody td{padding:8px;border-bottom:1px dashed rgba(255,255,255,0.03);color:#dce9f5}
     tbody tr:hover td{background:linear-gradient(90deg, rgba(255,255,255,0.01), rgba(255,255,255,0.02));}
     .pill{padding:6px 8px;border-radius:999px;font-size:12px;background:rgba(255,255,255,0.03);color:var(--muted)}
@@ -145,13 +145,7 @@
         </div>
 
         <div class="cards-row">
-          <div class="card">
-            <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px">
-              <div style="font-weight:700">أعلى أرصدة</div>
-              <div class="meta">رصيد السيستم</div>
-            </div>
-            <div id="barChart" class="small-chart"></div>
-          </div>
+          <!-- Removed: "أعلى أرصدة" card as requested -->
 
           <div class="card">
             <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px">
@@ -239,17 +233,16 @@
     const tableBody = document.querySelector('#dataTable tbody');
 
     // ECharts instances
-    let pieChart, barChart, statusDonut, supplyDaysChart;
+    let pieChart, statusDonut, supplyDaysChart;
 
     function initCharts() {
       pieChart = echarts.init(document.getElementById('pieChart'), null, {renderer: 'canvas'});
-      barChart = echarts.init(document.getElementById('barChart'), null, {renderer: 'canvas'});
       statusDonut = echarts.init(document.getElementById('statusDonut'), null, {renderer: 'canvas'});
       supplyDaysChart = echarts.init(document.getElementById('supplyDays'), null, {renderer: 'canvas'});
 
       // Responsive
       window.addEventListener('resize', () => {
-        pieChart.resize(); barChart.resize(); statusDonut.resize(); supplyDaysChart.resize();
+        pieChart.resize(); statusDonut.resize(); supplyDaysChart.resize();
       });
     }
 
@@ -314,33 +307,6 @@
                         '<div>' + (d.name || 'غير مسمى') + ' <span style="color:var(--muted);margin-inline-start:6px">(' + d.value + ')</span></div>';
         pieLegendEl.appendChild(div);
       });
-    }
-
-    function renderBarChart(topByBalance) {
-      const names = topByBalance.map(r => r.name || '');
-      const values = topByBalance.map(r => Number(r.balance) || 0);
-      const option = {
-        backgroundColor:'transparent',
-        grid:{left:8,right:16,top:10,bottom:20},
-        xAxis:{type:'value',show:false},
-        yAxis:{type:'category',data:names, inverse:true, axisLine:{show:false}, axisTick:{show:false}, axisLabel:{color: '#cfe9ff'}},
-        series:[{
-          type:'bar',
-          data:values,
-          barWidth:12,
-          itemStyle:{
-            borderRadius:8,
-            color: new echarts.graphic.LinearGradient(0,0,1,0,[{offset:0,color:'#06b6d4'},{offset:1,color:'#7c3aed'}]),
-            shadowBlur:12, shadowColor:'rgba(124,58,237,0.2)'
-          },
-          label:{
-            show:true,
-            position:'right',
-            formatter: function(params){ return formatNumber(params.value); }
-          }
-        }]
-      };
-      barChart.setOption(option);
     }
 
     function renderStatusDonut(statusCounts) {
@@ -492,14 +458,8 @@
           if (r['مدة التوريد من تاريخ الطلب'] !== '') supplyDays.push(Number(r['مدة التوريد من تاريخ الطلب']) || 0);
         });
 
-        // Top by system balance (removed truncation so all items are shown, not only top 10)
-        const topByBalance = [...allRows]
-          .sort((a,b)=> (Number(b['رصيد السيستم']) || 0) - (Number(a['رصيد السيستم']) || 0))
-          .map(r => ({ name: r['اسم الصنف'] ?? '', balance: Number(r['رصيد السيستم']) || 0 }));
-
         // Render charts
         renderPieChart(byCategory);
-        renderBarChart(topByBalance);
         renderStatusDonut(statusCounts);
         renderSupplyDays(supplyDays);
 
